package seedu.address.model.internship;

import static seedu.address.commons.util.CollectionUtil.requireAllNonNull;

import java.util.Objects;

import seedu.address.commons.util.ToStringBuilder;

/**
 * Represents an Internship in the internship data.
 * Guarantees: details are present and not null, field values are validated, immutable.
 */
public class Internship {
    // Identity fields
    private final CompanyName companyName;
    private final Location location;
    private final Description description;
    private final Role role;

    // Data fields
    private final ContactName contactName;
    private final ContactEmail contactEmail;
    private final ContactNumber contactNumber;
    private final ApplicationStatus applicationStatus;
    private final Remark remark;
    private final TaskList taskList;

    /**
     * Every field except for remark must be present and not null.
     */
    public Internship(CompanyName companyName, ContactName contactName, ContactEmail contactEmail,
                      ContactNumber contactNumber, Location location, ApplicationStatus applicationStatus,
                      Description description, Role role, Remark remark, TaskList taskList) {
        requireAllNonNull(companyName, contactName, contactEmail, contactNumber, applicationStatus, description);
        this.companyName = companyName;
        this.contactName = contactName;
        this.contactEmail = contactEmail;
        this.contactNumber = contactNumber;
        this.location = location;
        this.applicationStatus = applicationStatus;
        this.description = description;
        this.role = role;
        this.remark = remark;
        this.taskList = taskList;
    }

    public CompanyName getCompanyName() {
        return companyName;
    }

    public ContactName getContactName() {
        return contactName;
    }

    public ContactEmail getContactEmail() {
        return contactEmail;
    }

    public ContactNumber getContactNumber() {
        return contactNumber;
    }

    public Location getLocation() {
        return location;
    }

    public ApplicationStatus getApplicationStatus() {
        return applicationStatus;
    }

    public Description getDescription() {
        return description;
    }

    public Role getRole() {
        return role;
    }

    public Remark getRemark() {
        return remark;
    }

    public TaskList getTaskList() {
        return taskList;
    }

    public int getTaskListSize() {
        return taskList.getTaskListSize();
    }

    public void addTask(Task task) {
        taskList.addTask(task);
    }

    public void deleteTask(int index) {
        taskList.deleteTask(index);
    }

    /**
     * Returns true if both internships have the same compulsory fields.
     * This defines the same notion of equality between two internships. (Identity fields)
     */
    public boolean isSameInternship(Internship otherInternship) {
        if (otherInternship == this) {
            return true;
        }

        return otherInternship != null
                && companyName.equals(otherInternship.companyName)
                && contactName.equals(otherInternship.contactName)
                && contactEmail.equals(otherInternship.contactEmail)
                && contactNumber.equals(otherInternship.contactNumber)
                && description.equals(otherInternship.description)
                && role.equals(otherInternship.role)
                && location.equals(otherInternship.location);
    }

    /**
     * Returns true if both internships have the same identity and data fields.
     * This defines a stronger notion of equality between two internships.
     */
    @Override
    public boolean equals(Object other) {
        if (other == this) {
            return true;
        }

        // instanceof handles nulls
        if (!(other instanceof Internship)) {
            return false;
        }

        Internship otherInternship = (Internship) other;
        return companyName.equals(otherInternship.companyName)
                && contactName.equals(otherInternship.contactName)
                && contactEmail.equals(otherInternship.contactEmail)
                && contactNumber.equals(otherInternship.contactNumber)
                && description.equals(otherInternship.description)
                && role.equals(otherInternship.role)
                && location.equals(otherInternship.location);
    }

    @Override
    public int hashCode() {
        // use this method for custom fields hashing instead of implementing your own
        return Objects.hash(companyName, location, role, description);
    }

    @Override
    public String toString() {
        return new ToStringBuilder(this)
                .add("companyName", companyName)
                .add("contactName", contactName)
                .add("contactEmail", contactEmail)
                .add("contactNumber", contactNumber)
                .add("location", location)
                .add("applicationStatus", applicationStatus)
                .add("description", description)
                .add("role", role)
                .add("remark", remark)
                .add("taskList", taskList)
                .toString();
    }
}
