@startuml
class Internship {
  -companyName: String
  -contactName: String
  -contactEmail: String
  -contactNumber: String
  -applicationStatus: String
  -description: String
  -role: Role
  -location: Location
  +isSameInternship(Internship): boolean
  +equals(Internship):boolean
}

class Role {
  -role: String
  +isValidRole(String): boolean
}

class Location {
  -location: LocationEnum
  +isValidLocation(String): boolean
}

Internship "0..1" -- "0..1" Role : has >
Internship "0..1" -- "0..1" Location : has >
@enduml
